Post preview not showing map correctly if status is `auto-draft` - FIXED Added no cache headers to the add listing page - ADDED Added check to the save images function that the post exists first - ADDED Comment cache not being cleared on add/edit/update - FIXED Selects and radio inputs not showing as selected for zero (0) values - FIXED Multi-select not fully deselecting for empty values - FIXED Set some pages to use the page template metadata for better theme compatibility - CHANGED

--- a/assets/css/partials/_listings.scss
+++ b/assets/css/partials/_listings.scss
@@ -158,6 +158,10 @@ body { // wrapping ina  body tag makes rules more specific
 		// grid view
 		&.geodir-gridview {
 
+			.geodir-fav-text, .gd-list-rating-text{
+				display: none;
+			}
+
 			& > li {
 				width: auto;
 				margin-bottom: 15px;
@@ -206,6 +210,12 @@ body { // wrapping ina  body tag makes rules more specific
 			}
 
 			&.gridview_onefifth {
+
+				// hide hours one onefith
+				.gd-bh-today-range{
+					display: none;
+				}
+
 				& > li {
 					width: 18%;
 					margin-left: 2.5%;
