--- a/assets/css/partials/_widget_images.scss
+++ b/assets/css/partials/_widget_images.scss
@@ -37,6 +37,7 @@
         overflow: hidden;
         transition: transform .5s;
         transition-timing-function: ease-in-out;
+        width: 100%;
         height: auto;
       }
 
